# ddminer-keryx

./: .gitignore  LICENSE-MIT  NOTICE.md  README.md  SHA256SUMS
.github/workflows/: windows-build.yml
bundles/: SHA256SUMS
docs/: BUILD.md
keryx-miner/: Cargo.toml  MULTIPOOLDD.md  README.md  build.rs  ddminer-dual.sh
keryx-miner/integrations/hiveos/: h-config.sh  h-manifest.conf  h-stats.sh
keryx-miner/plugins/cuda/kaspa-cuda-native/src/: bench-instr.cu  bench-opt.cu  bench.cu  kaspa-cuda-opt-instr.cu  kaspa-cuda-opt.cu  kaspa-cuda.cu  keccak-fast.c
keryx-miner/plugins/cuda/resources/: keryx-cuda-sm100.ptx  keryx-cuda-sm120.ptx  keryx-cuda-sm61.ptx  keryx-cuda-sm75.ptx  keryx-cuda-sm80.ptx  keryx-cuda-sm86.ptx  keryx-cuda-sm89.ptx
keryx-miner/plugins/cuda/src/: lib.rs  worker.rs
keryx-miner/rxengine/: Cargo.toml
keryx-miner/rxengine/src/: engine.rs  job.rs  lib.rs  orchestrator.rs  stratum.rs
keryx-miner/src/: cli.rs  cpu_randomx.rs  ipfs.rs  lib.rs  main.rs  miner.rs  models.rs  pom.rs  pom_gpu.rs  pow.rs  slm.rs
keryx-miner/src/client/: stratum.rs
keryx-miner/src/client/stratum/: statum_codec.rs
releases/: SHA256SUMS-0.5.3  SHA256SUMS-0.5.4  SHA256SUMS-0.5.5
