[package]
name = "rxengine"
version = "0.1.0"
edition = "2021"
description = "Motor de minado RandomX (XMR/QRL) para el ddminer"

[lib]
name = "rxengine"
path = "src/lib.rs"

[dependencies]
randomx-rs = "1.4.1"
core_affinity = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros", "sync"] }
